@@ -470,82 +470,6 @@ int CGUIControl::GetGroup(void) const
   return m_iGroup;
 }
 
-CStdString CGUIControl::ParseLabel(CStdString& strLabel)
-{
-  CStdString strReturn = "";
-  int iPos1 = 0;
-  int iPos2 = strLabel.Find('$', iPos1);
-  bool bDoneSomething = !(iPos1 == iPos2);
-  while (iPos2 >= 0)
-  {
-    if( (iPos2 > iPos1) && bDoneSomething )
-    {
-      strReturn += strLabel.Mid(iPos1, iPos2 - iPos1);
-      bDoneSomething = false;  
-    }
-
-    int iPos3 = 0;
-    CStdString str;
-    CStdString strInfo = "INFO[";
-    CStdString strLocalize = "LOCALIZE[";
-
-    // $INFO[something]
-    if (strLabel.Mid(iPos2 + 1,strInfo.size()).Equals(strInfo))
-    {
-      iPos2 += strInfo.size() + 1;
-      iPos3 = strLabel.Find(']', iPos2);
-      CStdString strValue = strLabel.Mid(iPos2,(iPos3 - iPos2));
-      int iInfo = g_infoManager.TranslateString(strValue);
-      if (iInfo)
-      {
-        str = g_infoManager.GetLabel(iInfo);
-        if (str.size() > 0)
-          bDoneSomething = true;
-      }
-    }
-
-    // $LOCALIZE[something]
-    else if (strLabel.Mid(iPos2 + 1,strLocalize.size()).Equals(strLocalize))
-    {
-      iPos2 += strLocalize.size() + 1;
-      iPos3 = strLabel.Find(']', iPos2);
-      CStdString strValue = strLabel.Mid(iPos2,(iPos3 - iPos2));
-      if (CUtil::IsNaturalNumber(strValue))
-      {
-        int iLocalize = atoi(strValue);
-        str = g_localizeStrings.Get(iLocalize);
-        if (str.size() > 0)
-          bDoneSomething = true;
-      }
-    }
-
-    // $$ prints $
-    else if (strLabel[iPos2 + 1] == '$')
-    { 
-      iPos3 = iPos2 + 1;
-      str = '$';
-      bDoneSomething = true;
-    }
-
-    //Okey, nothing found, just print it right out
-    else
-    {
-      iPos3 = iPos2;
-      str = '$';
-      bDoneSomething = true;
-    }
-
-    strReturn += str;
-    iPos1 = iPos3 + 1;
-    iPos2 = strLabel.Find('$', iPos1);
-  }
-
-  if (iPos1 < (int)strLabel.size())
-    strReturn += strLabel.Right(strLabel.size() - iPos1);
-
-  return strReturn;
-}
-
 void CGUIControl::UpdateVisibility()
 {
   bool bWasVisible = m_lastVisible;
