@@ -62,11 +62,11 @@ public:
 	virtual ~CX3LCD(void);
 	virtual void Initialize();
 	virtual void Stop();
-	virtual void SetLine(int iLine, const CStdString& strLine);
 	virtual void SetBackLight(int iLight);
 	virtual void SetContrast(int iContrast);
 protected:
 	virtual void		Process();
+	virtual void SetLine(int iLine, const CStdString& strLine);
 	void    DisplayInit();
 	void    DisplaySetBacklight(unsigned char level) ;
     void    DisplaySetContrast(unsigned char level);
